<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/layout"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <LinearLayout
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/linearLayout2"
                style="@style/card_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_user"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_launcher_background"
                        android:scaleType="centerCrop"
                        tools:src="@tools:sample/avatars"/>

                    <LinearLayout
                        android:id="@+id/repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_repository"
                            style="@style/header_font_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/init_number"
                            android:textAlignment="center" />

                        <TextView
                            style="@style/content_font_small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/repository" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_follower"
                            style="@style/header_font_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/init_number"
                            android:textAlignment="center" />

                        <TextView
                            style="@style/content_font_small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/follower" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/followings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_following"
                            style="@style/header_font_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/init_number"
                            android:textAlignment="center" />

                        <TextView
                            style="@style/content_font_small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/following" />

                    </LinearLayout>

                </LinearLayout>
                <TextView
                    android:id="@+id/tv_name"
                    style="@style/content_font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fullname" />

                <TextView
                    android:id="@+id/tv_bio"
                    style="@style/content_font_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/description" />

                <LinearLayout
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_company" />

                    <TextView
                        android:id="@+id/tv_company"
                        style="@style/content_font_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/company" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_location" />

                    <TextView
                        android:id="@+id/tv_location"
                        style="@style/content_font_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/location" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/blog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_web_24" />

                    <TextView
                        android:id="@+id/tv_blog"
                        style="@style/content_font_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/blog" />

                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_visit"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/white"
                        android:gravity="center"
                        android:text="@string/visit"
                        android:textAppearance="@style/content_font_small"
                        android:textColor="@color/gray"
                        app:icon="@drawable/github_logo"
                        app:iconGravity="textStart"
                        app:iconSize="24dp"
                        app:iconTint="@color/black_3" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/white"
                        android:text="@string/share"
                        android:textAppearance="@style/content_font_small"
                        android:textColor="@color/gray"
                        app:icon="@drawable/ic_share"
                        app:iconGravity="textStart"
                        app:iconTint="@color/blue_1" />

                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/style_view"
                android:layout_width="match_parent"/>
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>